--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/version_mobile.css" media="screen and (max-width: 768px)">
@@ -15,106 +14,9 @@
 <body>
   <main>
     <div class="container-primary">
-      <section class="section-primary">
-        <div class="card-violet">
-          <div class="dates-header-long">
-            <img src="./images/image-daniel.jpg" alt="">
-            <div class="dates">
-              <h4>Daniel Clifford</h4>
-              <p>Verified Graduate</p>
-            </div>
-          </div>
-          <h2 class="test-principal">
-            I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-            in the company I joined. I honestly feel I got every penny’s worth.
-          </h2>
-          <p class="test-secundary">
-            “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-            transition and have heard some people who had an amazing experience here. I signed up 
-            for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-            The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-            the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-          </p>
-        </div>
-        <div class="card-dark-gray">
-          <div class="dates-header-short">
-            <img src="./images/image-jonathan.jpg" alt="">
-            <div class="dates">
-              <h4>Jonathan Walters</h4>
-              <p>Verified Graduate</p>
-            </div>
-          </div>
-          <h2 class="test-principal">
-            The team was very supportive and kept me motivated
-          </h2>
-          <p class="test-secundary">
-            “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-            for a big company. This was one of the best investments I’ve made in myself. ”
-          </p>
-        </div>
-      </section>
-      <section class="section-secundary">
-        <div class="card-white">
-          <div class="dates-header-short">
-            <img src="./images/image-jeanette.jpg" alt="">
-            <div class="dates">
-              <h4>Jeanette Harmon</h4>
-              <p>Verified Graduate</p>
-            </div>
-          </div>
-          <h2 class="test-principal">
-            An overall wonderful and rewarding experience
-          </h2>
-          <p class="test-secundary">
-            “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-            while doing something I love. ”
-          </p>
-        </div>
-        <div class="card-dark-black">
-          <div class="dates-header-long">
-            <img src="./images/image-patrick.jpg" alt="">
-            <div class="dates">
-              <h4>Patrick Abrams</h4>
-              <p>Verified Graduate</p>
-            </div>
-          </div>
-          <h2 class="test-principal">
-            Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-            learning from their experiences was easy.
-          </h2>
-          <p class="test-secundary">
-            “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-            gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-            junior developer. The standard is above the rest. You will get the personal attention you need from 
-            an incredible community of smart and amazing people. ”
-          </p>
-        </div>
-      </section>
-    </div>
-    <div class="container-secundary">
-      <div class="card-white">
-        <div class="dates-header-short">
-          <img src="./images/image-kira.jpg" alt="">
-          <div class="dates">
-            <h4>Kira Whittle</h4>
-            <p>Verified Graduate</p>
-          </div>
-        </div>
-        <h2 class="test-principal">
-          Such a life-changing experience. Highly recommended!
-        </h2>
-        <p class="test-secundary">
-          “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-          professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-          student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-          did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-          project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-          could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-          100% recommend! ”
-        </p>
-      </div>
-    </div>
+      <section class="container-buttons"></section>
+      <section id="app" class="section-primary"></section>
   </main>
 </body>
+<script type="module" src="./index.js"></script>
 </html>
